# alpaca-bonsai

./: .gitignore  AGENTS.md  Makefile  README.md  package.json
bots/: AGENTS.md  README.md
bots/discord-bot/: bot.js  package.json
bots/slack-bot/: bot.js  package.json
config/agents/: claude-code.md  codex.md  hermes-agent.md  pi-agent.md  vscode.md
desktop/: .gitignore  AGENTS.md  LICENSE  README.md  advanced-args.js  api-compat.js  api-gateway.js  api-key-migration.js  api-server.js  backend-feature-detector.js  binary-manager.js  bonsai-models.js  build-all-backends.ps1  build-docs.js  build-webui.js  chat-template-detector.js  clean-dist.js  eviction-ranker.js  full_test_output.txt  gguf-metadata-cache.js  grammar-library.js  health-probe.js  hf-model-service.js  hf-token-migration.js  ide-config-generator.js  image-service.js  installer.nsh  key-derivation.js  knowledge-base-mcp-launcher.js  knowledge-base-mcp.js  knowledge-base.js  launch-service.js  lazy-start-manager.js  loading.html  logs-viewer.html  logs-viewer.js  main.js  migration-dialog-manager.js  migration-dialog.html  model-classifier.js  (+33 more)
desktop/grammars/: json-object.gbnf  markdown.gbnf  python.gbnf  sql.gbnf
desktop/scripts/: build-jcm.js
desktop/tests/: DELETEOLDRECORDS_IMPLEMENTATION.md  ENVELOPE_CREATION_IMPLEMENTATION.md  PHASE_4_3_BENCHMARKING_GUIDE.md  (+65 more)
docs/: AGENTS.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
tui/: AGENTS.md  Cargo.toml  alpaca-tui-plan.md  build.rs
tui/src/: main.rs
webui/: AGENTS.md  package-lock.json  package.json  vite.config.ts
(+247 files in other folders)
