[package]
name = "alpaca-tui"
version = "0.1.0"
edition = "2024"
authors = ["Tom <tom@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsai/alpaca-bonsai"
rust-version = "1.85"
description = "Terminal UI for the Alpaca local LLM server (bonsai-beach compatible)"

[[bin]]
name = "alpaca-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
tui-textarea = "0.7"
unicode-width = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
